@@ -53,7 +53,9 @@ bound. For instance, if <c>STARPU_WORKERS_CPUID = "0 1 4 5"</c>, the first
 worker will be bound to logical CPU #0, the second CPU worker will be bound to
 logical CPU #1 and so on.  Note that the logical ordering of the CPUs is either
 determined by the OS, or provided by the library <c>hwloc</c> in case it is
-available. Ranges can be provided: for instance, <c>STARPU_WORKERS_CPUID = "1-3
+available (in which case it might by provided by the job scheduler, see \ref
+STARPU_WORKERS_GETBIND).
+Ranges can be provided: for instance, <c>STARPU_WORKERS_CPUID = "1-3
 5"</c> will bind the first three workers on logical CPUs #1, #2, and #3, and the
 fourth worker on logical CPU #5. Unbound ranges can also be provided:
 <c>STARPU_WORKERS_CPUID = "1-"</c> will bind the workers starting from logical
