@@ -106,6 +106,9 @@ unsigned _starpu_topology_get_nhwcpu(struct _starpu_machine_config *config);
 /** returns the number of logical cpus */
 unsigned _starpu_topology_get_nhwpu(struct _starpu_machine_config *config);
 
+/** returns the number of logical cpus */
+unsigned _starpu_topology_get_nhwpu(struct _starpu_machine_config *config);
+
 /** returns the number of NUMA nodes */
 unsigned _starpu_topology_get_nnumanodes(struct _starpu_machine_config *config);
 
