@@ -912,7 +912,10 @@ void _starpu_tcpip_common_mp_initialize_src_sink(struct _starpu_mp_node *node)
 
 	int ntcpipcores = starpu_getenv_number("STARPU_NTCPIPMSTHREADS");
 	if (ntcpipcores == -1)
-		node->nb_cores = topology->nhwworker[STARPU_CPU_WORKER][0];
+	{
+		int nhyperthreads = topology->nhwpus / topology->nhwworker[STARPU_CPU_WORKER][0];
+		node->nb_cores = topology->nusedpus / nhyperthreads;
+	}
 	else
 		node->nb_cores = ntcpipcores;
 }
